--- a/scripts/interfaceGenerator/package.json
+++ b/scripts/interfaceGenerator/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx ts-node src/index.ts",
+    "start:console": "npm run start > console.out 2>&1"
   },
   "author": "Matt Strenk",
   "license": "MIT",
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
-    "multi-json-to-ts": "^1.0.1"
+    "multi-json-to-ts": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
