Add tests for games api functions

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "test": "jest",
     "build": "npx tsc",
+    "build:clear": "rm -rf dist; npm run build",
     "lint": "npx eslint .",
     "lintfix": "npx eslint . --fix",
     "format": "npx prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "update": "npx npm-check -u",
-    "docs": "npx typedoc --entryPointStrategy expand ./src --name nhl-api-wrapper-ts --out ./docs"
+    "docs": "npx typedoc --entryPointStrategy expand ./src --name nhl-api-wrapper-ts --out ./docs",
+    "prepublishOnly": "npm run build:clean"
   },
   "keywords": [
     "nhl",
@@ -20,12 +23,17 @@
   "author": "Matt Strenk",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "fp-ts": "^2.16.9",
+    "io-ts": "^2.2.21",
+    "jest": "^29.7.0",
     "npm-check": "^6.0.1",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typedoc": "^0.26.7",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0"
